Basic commands working correctly

--- a/index.html
+++ b/index.html
@@ -9,5 +9,40 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
+    <div id="hardCase">
+      <div id="touch">
+        <div class="display">
+          <div id="topDisplay"></div>
+          <div id="bottomDisplay"></div>
+        </div>
+        <div class="buttons">
+          <div class="top">
+            <button>operate function</button>
+            <button id="idClear">AC</button>
+            <button>empty</button>
+          </div>
+          <div class="middle">
+            <button>7</button>
+            <button>8</button>
+            <button>9</button>
+            <button>4</button>
+            <button>5</button>
+            <button>6</button>
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button>0</button>
+            <button>.</button>
+          </div>
+          <div class="rightSide">
+            <button>÷</button>
+            <button>×</button>
+            <button>-</button>
+            <button>+</button>
+          </div>
+          <button class="btnEqual">=</button>
+        </div> 
+      </div>
+    </div>
 	</body>
 </html>
