Calculator is able to evaluate a single pair of numbers at a time, display the result of that calculation and finally, use that result  as the first number in your new calculation

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         </div>
         <div class="buttons">
           <div class="top">
-            <button>operate function</button>
+            <!-- <button>operate function</button> -->
             <button id="idClear">AC</button>
-            <button>empty</button>
+            <!-- <button>empty</button> -->
           </div>
           <div class="middle">
             <button>7</button>
@@ -42,6 +42,7 @@
           </div>
           <button class="btnEqual">=</button>
         </div> 
+        <div>12 + 7 - 5 * 3</div>
       </div>
     </div>
 	</body>
