--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
     <div id="hardCase">
       <div id="touch">
         <div class="display">
+          <div id="box"></div>
           <div id="topDisplay"></div>
           <div id="bottomDisplay"></div>
         </div>
         <div class="buttons">
           <div class="top">
-            <!-- <button>operate function</button> -->
+            <button><img src="backspace.svg" alt="C" height="20px"> </button>
             <button id="idClear">AC</button>
-            <!-- <button>empty</button> -->
+            <button>+/-</button>
           </div>
           <div class="middle">
             <button>7</button>
@@ -31,8 +32,8 @@
             <button>1</button>
             <button>2</button>
             <button>3</button>
-            <button>0</button>
-            <button>.</button>
+            <button id="zero">0</button>
+            <button id="decimalPoint">.</button>
           </div>
           <div class="rightSide">
             <button>÷</button>
@@ -42,7 +43,6 @@
           </div>
           <button class="btnEqual">=</button>
         </div> 
-        <div>12 + 7 - 5 * 3</div>
       </div>
     </div>
 	</body>
