Fixed calculations errors and added backspace and +/- functions

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         </div>
         <div class="buttons">
           <div class="top">
-            <button><img src="backspace.svg" alt="C" height="20px"> </button>
+            <button id="idBackspace"><img src="backspace.svg" alt="C" height="20px"> </button>
             <button id="idClear">AC</button>
-            <button>+/-</button>
+            <button id="idPositiveNegative">+/-</button>
           </div>
           <div class="middle">
             <button>7</button>
