Added keyboard support

--- a/index.html
+++ b/index.html
@@ -13,33 +13,32 @@
       <div id="touch">
         <div class="display">
           <div id="box"></div>
-          <div id="topDisplay"></div>
           <div id="bottomDisplay"></div>
         </div>
         <div class="buttons">
           <div class="top">
-            <button id="idBackspace"><img src="backspace.svg" alt="C" height="20px"> </button>
+            <button id="idBackspace"><img src="backspace.svg" alt="C" height="20px"></button>
             <button id="idClear">AC</button>
             <button id="idPositiveNegative">+/-</button>
           </div>
           <div class="middle">
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
+            <button id="seven">7</button>
+            <button id="eight">8</button>
+            <button id="nine">9</button>
+            <button id="four">4</button>
+            <button id="five">5</button>
+            <button id="six">6</button>
+            <button id="one">1</button>
+            <button id="two">2</button>
+            <button id="three">3</button>
             <button id="zero">0</button>
             <button id="decimalPoint">.</button>
           </div>
           <div class="rightSide">
-            <button>÷</button>
-            <button>×</button>
-            <button>-</button>
-            <button>+</button>
+            <button id="division">÷</button>
+            <button id="multiplication">×</button>
+            <button id="minus">-</button>
+            <button id="plus">+</button>
           </div>
           <button class="btnEqual">=</button>
         </div> 
